[gd_scene load_steps=2 format=3 uid="uid://bvkn8wq2n4jgv"]

[ext_resource type="Script" uid="uid://bpn47g6a0wxal" path="res://gameboard/scripts/Tile.gd" id="1_x8h0q"]

[node name="Tile" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = 1.0
offset_right = 2.0
offset_bottom = 1.0
script = ExtResource("1_x8h0q")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
